--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </style>
   </head>
   <body>
-    <h1>Starbuzz Coffee Beverages</h1>
+    <h1>Starbuzz Coffee Beverages.</h1>
     <h2>House   Blend,$1.49</h2>
     <p>
       A smooth mild blend of coffe from Mexico, Bolivia and Guatemala .!
@@ -36,7 +36,7 @@
       Chai Tea,$1.85
     </h2>
     <p>
-      A spicy drink made with black tea,spices,milk and honey.
+      A  spicy drink made with black tea,spices,milk and honey.
     </p>
   </body>
 </html>
